Sun Dec 21 17:29:00 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_check_inheritable): new function.  [ruby-dev:22316]

	* intern.h: add prototype.

	* eval.c (superclass): use rb_check_inheritable().

	* object.c (rb_class_initialize): check argument validity.

Sun Dec 21 16:25:10 2003  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (Pathname#+): re-implemented to resolve ".." in
	  beginning of the argument.
	  (Pathname#join): concatenate from the last argument.
	  (Pathname#parent): just use Pathname#+.

Sun Dec 21 00:12:37 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: add new methods (TkScrollbar#assign, assign_list)

	* ext/tk/sample/tkmultilistframe.rb: use TkScrollbar#assign method

Sat Dec 20 21:59:03 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httprequest.rb (HTTPRequest#meta_vars): refine regexp.

	* lib/webrick/cgi.rb (CGI#start): NPH scripts return status line
	  instead of Status: header field.

	* lib/webrick/cgi.rb (CGI::Socket): refine some coditions.

Sat Dec 20 16:07:14 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::Completion::complete): wrong
	  Regexp for word boundary.  pointed out by Gavin Sinclair.

	* lib/optparse.rb (OptionParser::make_switch): [no-] prefix was
	  missing.

Sat Dec 20 11:40:10 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/yaml.rb (YAML::YAML): adjust Marshal version.

Sat Dec 20 03:56:02 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_with_disable_interrupt): prohibit thread context
	  switch during proc execution.  [ruby-dev:21899]

Sat Dec 20 02:41:02 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb: add file. (yet another CGI library)

	* MANIFEST: add lib/webrick/cgi.rb.

Sat Dec 20 02:18:31 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el (ruby-calculate-indent): proper indentation
	  inside of parentheses.  [ruby-dev:22308]
